Copy over PR#899

--- a/.github/workflows/annotated-pkgs.yml
+++ b/.github/workflows/annotated-pkgs.yml
@@ -24,9 +24,9 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/setup-node@v3
         with:
-          node-version: "14"
+          node-version: 16
 
       - name: Install yarn 3
         run: npm i -g yarn
