--- a/examples/remote_procedure/mnist/webapp/package.json
+++ b/examples/remote_procedure/mnist/webapp/package.json
@@ -13,10 +13,10 @@
     "bootstrap": "^4.6.0",
     "mephisto-task": "2.0.2",
     "rc-slider": "^8.6.3",
-    "react": "16.13.1",
+    "react": "^18.2.0",
     "react-bootstrap": "^1.6.0",
     "react-canvas-draw": "^1.2.1",
-    "react-dom": "16.13.1",
+    "react-dom": "^18.2.0",
     "react-table": "^6.8.6"
   },
   "devDependencies": {
