--- a/examples/static_react_task_with_tips/webapp/package.json
+++ b/examples/static_react_task_with_tips/webapp/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "mephisto-task": "2.0.2",
     "mephisto-worker-addons": "1.0.0",
-    "react": "16.13.1",
+    "react": "^18.2.0",
     "react-dom": "16.13.1"
   },
   "devDependencies": {
