--- a/.github/workflows/cypress-end-to-end-tests.yml
+++ b/.github/workflows/cypress-end-to-end-tests.yml
@@ -29,6 +29,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 2
+      - uses: actions/setup-node@v3
+        with:
+          cache: "yarn"
+          node-version: 16
       - uses: dorny/paths-filter@v2
         id: filter
         with:
