--- a/examples/static_react_task/webapp/package.json
+++ b/examples/static_react_task/webapp/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "mephisto-task": "2.0.2",
-    "react": "16.13.1",
+    "react": "^18.2.0",
     "react-dom": "16.13.1"
   },
   "devDependencies": {
