--- a/mephisto/abstractions/blueprints/static_html_task/source/package.json
+++ b/mephisto/abstractions/blueprints/static_html_task/source/package.json
@@ -14,9 +14,9 @@
     "bootstrap": "^4.3.1",
     "mephisto-task": "2.0.2",
     "rc-slider": "^8.6.3",
-    "react": "16.13.1",
+    "react": "^18.2.0",
     "react-bootstrap": "^0.32.4",
-    "react-dom": "16.13.1",
+    "react-dom": "^18.2.0",
     "react-table": "^6.8.6"
   },
   "devDependencies": {
