--- a/packages/mephisto-review-hook/package.json
+++ b/packages/mephisto-review-hook/package.json
@@ -29,8 +29,8 @@
     "eslint-plugin-jsx-a11y": "6.x",
     "eslint-plugin-react": "7.x",
     "eslint-plugin-react-hooks": "2.x",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "style-loader": "^1.1.3",
     "url-loader": "^4.1.0",
     "webpack": "^5.70.0",
