--- a/.github/workflows/annotated-pkgs.yml
+++ b/.github/workflows/annotated-pkgs.yml
@@ -25,6 +25,8 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v3
+        env:
+          FORCE_COLOR: 0
         with:
           node-version: 16
 
