--- a/.github/workflows/cypress-end-to-end-tests.yml
+++ b/.github/workflows/cypress-end-to-end-tests.yml
@@ -31,6 +31,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 2
+      # Workaround to avoid Post Use step failures. See: https://github.com/actions/setup-node/issues/317
+      - run: mkdir -p /home/runner/.cache/yarn/v6
+        continue-on-error: true
       - uses: actions/setup-node@v3
         with:
           cache: "yarn"
